fixed some bugs in getting the wrong parameters for some end-points.
