# src/handlers/corporateTitleHistoryByEmployeeIdHandler.ts
@@ -6,10 +6,10 @@ import { RdfGraphFactory } from "../rdf/RdfGraphFactory";
 
 
 const corporateTitleHistoryByEmployeeIdHandler = async (context: Context, request: Request, response: Response) => {
-    if (context.request.params.employeeId) {
+    if (context.request.params.employeeid) {
         const rdfOrganization: IOrganizationRdfQuery = RdfGraphFactory.getInstance().getOrganizationRdfGraph();
         try {
-            const result = await rdfOrganization.getEmployeeCorporateTitleHistoryByEmployeeId(context.request.params.employeeId as string);
+            const result = await rdfOrganization.getEmployeeCorporateTitleHistoryByEmployeeId(context.request.params.employeeid as string);
             response.json(result);
         }
         catch (error) {
