# src/handlers/departmentHistoryByEmployeeIdHandler.ts
@@ -4,10 +4,10 @@ import { IOrganizationRdfQuery } from "../rdf/IOrganizationRdfQuery";
 import { RdfGraphFactory } from "../rdf/RdfGraphFactory";
 
 const departmentHistoryByEmployeeIdHandler = async (context: Context, request: Request, response: Response) => {
-    if (context.request.params.employeeId) {
+    if (context.request.params.employeeid) {
         const rdfOrganization: IOrganizationRdfQuery = RdfGraphFactory.getInstance().getOrganizationRdfGraph();
         try {
-            const result = await rdfOrganization.getEmployeeDepartmentHistoryByEmployeeId(context.request.params.employeeId as string);
+            const result = await rdfOrganization.getEmployeeDepartmentHistoryByEmployeeId(context.request.params.employeeid as string);
             response.json(result);
         }
         catch (error) {
