# src/handlers/idhandlers/employeeByEmployeeIdHandler.ts
@@ -4,10 +4,10 @@ import { IOrganizationRdfQuery } from "../../rdf/IOrganizationRdfQuery";
 import { RdfGraphFactory } from "../../rdf/RdfGraphFactory";
 
 const employeeByEmployeeIdHandler = async (context: Context, request: Request, response: Response) => {
-    if (context.request.params.employeeId) {
+    if (context.request.params.employeeid) {
         const rdfOrganization: IOrganizationRdfQuery = RdfGraphFactory.getInstance().getOrganizationRdfGraph();
         try {
-            const result = await rdfOrganization.getEmployeeByEmployeeId(context.request.params.employeeId as string);
+            const result = await rdfOrganization.getEmployeeByEmployeeId(context.request.params.employeeid as string);
             console.log(result);
             response.json({result: result});
         }
