# src/handlers/idhandlers/employeeByEmployeeSystemIdHandler.ts
@@ -4,10 +4,10 @@ import { IOrganizationRdfQuery } from "../../rdf/IOrganizationRdfQuery";
 import { RdfGraphFactory } from "../../rdf/RdfGraphFactory";
 
 const employeeByEmployeeSystemIdHandler = async (context: Context, request: Request, response: Response) => {
-    if (context.request.params.employeeSystemId) {
+    if (context.request.params.employeesystemid) {
         const rdfOrganization: IOrganizationRdfQuery = RdfGraphFactory.getInstance().getOrganizationRdfGraph();
         try {
-            const result = await rdfOrganization.getEmployeeByEmployeeSystemId(context.request.params.employeeSystemId as string);
+            const result = await rdfOrganization.getEmployeeByEmployeeSystemId(context.request.params.employeesystemid as string);
             console.log(result);
             response.json({ result: result});
         }
